refractor(app):download-ticket-now-downloads-insights-yaxis-changes-flex-alignment-fix

--- a/src/pages/app/Guests/components/ViewGuest/ViewGuest.module.css
+++ b/src/pages/app/Guests/components/ViewGuest/ViewGuest.module.css
@@ -186,6 +186,7 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   row-gap: 0.5rem;
+  column-gap: 0.5rem;
 
   align-items: center;
 }
