--- a/src/pages/app/Insights/Insights.module.css
+++ b/src/pages/app/Insights/Insights.module.css
@@ -181,10 +181,8 @@
 .totalRegistered {
   margin-bottom: 1rem;
   display: flex;
-  column-gap: 1rem;
-  row-gap: 1rem;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .liveTraffic {
